fix: make pages scrollable on item overflow

--- a/frontend-react-js/src/App.css
+++ b/frontend-react-js/src/App.css
@@ -1,10 +1,27 @@
-main, article {
+html, body, #react-app, .App {
   height: 100%;
+}
+.App {
+  display: flex;
+}
+
+main, article {
+  min-height: 100%;
   width: 100%;
 }
 
 .content {
   width: 600px;
-  height: 100%;
+  height: 100vh; 
   background: var(--fg);
+  display: flex;
+  flex-direction: column;
+}
+
+.content > div {
+  flex-grow: 1; 
+}
+
+.content {
+  overflow-y: auto;
 }
