--- a/frontend-react-js/src/components/ActivityItem.css
+++ b/frontend-react-js/src/components/ActivityItem.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   border-bottom: solid 1px rgb(60,54,79);
   overflow: hidden;
-  /* overflow: scroll;
-  flex-grow: 1; */
 }
 
 .activity_item.clickable:hover {
